--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -253,7 +253,7 @@
               <li><a class="dropdown-item" href="{% url 'allproducts' %}">All Products</a></li>
               <li><a class="dropdown-item" href="{% url 'laptops' %}">Laptops</a></li>
               <li><a class="dropdown-item" href="{% url 'desktops' %}">Desktops</a></li>
-              <li><a class="dropdown-item" href="{% url 'peripherals' %}">Peripherals</a></li>
+              <li><a class="dropdown-item" href="{% url 'peripherals' %}">Accessories</a></li>
             </ul>
           </li>
 
