--- a/templates/research/research.html
+++ b/templates/research/research.html
@@ -241,7 +241,7 @@
         </a>
         <a href="{% url 'security' %}" class="category-item">
             <div class="category-icon">S</div>
-            <span>Security</span>
+            <span>CyberSecurity</span>
         </a>
 
         <a href="{% url 'projects' %}" class="category-item">
