--- a/templates/research/security.html
+++ b/templates/research/security.html
@@ -4,7 +4,7 @@
 
 
     
-    <title>Research Everything IT</title>
+    <title>Research Everything CyberSecurity</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -220,8 +220,16 @@
         </div>
     </div>
     
+    <div>
+        <nav aria-label="breadcrumb" class="mb-4">
+            <ol class="breadcrumb bg-transparent p-0">
+                <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'research' %}">Research</a></li>
+            </ol>
+        </nav>
+    </div>
     
-    <div class="section-heading">RESEARCH ABOUT SECURITY</div>
+    <div class="section-heading">RESEARCH ABOUT CYBER SECURITY</div>
     <h2 class="section-title">Read the Latest in the Research Hub</h2>
     
     <section class="py-6">
