--- a/templates/hardware/peripherals.html
+++ b/templates/hardware/peripherals.html
@@ -18,7 +18,7 @@
 <section class="section-name padding-y-sm">
     <div class="container">
         <header class="section-heading">
-            <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
+            <!-- <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a> -->
             <h3 class="section-title">Computer Accessories</h3>
         </header><!-- sect-heading -->
         
