--- a/templates/research/cloud.html
+++ b/templates/research/cloud.html
@@ -219,6 +219,14 @@
               </form>
         </div>
     </div>
+
+    <nav aria-label="breadcrumb" class="mb-4">
+        <ol class="breadcrumb bg-transparent p-0">
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'research' %}">Research</a></li>
+            <li class="breadcrumb-item active" aria-current="page">{{ single_product.product_name }}</li>
+        </ol>
+    </nav>
     
     
     <div class="section-heading">RESEARCH ABOUT CLOUD</div>
