--- a/templates/software/applications.html
+++ b/templates/software/applications.html
@@ -18,7 +18,7 @@
 <section class="section-name padding-y-sm">
     <div class="container">
         <header class="section-heading">
-            <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
+            <!-- <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a> -->
             <h3 class="section-title">Software Applications</h3>
         </header><!-- sect-heading -->
         
@@ -47,7 +47,7 @@
                 </div> <!-- col.// -->
              
             {% empty %}
-                <p>No  products available.</p>
+            <p><h1>No  products available.</h1></p>
             {% endfor %}
         </div> <!-- row.// -->
     </div><!-- container // -->
