--- a/templates/partials/_hero_section.html
+++ b/templates/partials/_hero_section.html
@@ -66,11 +66,11 @@
 
 <!-- Custom CSS for animated background and icon colors -->
 <style>
-    .animated-bg {
+    /* .animated-bg {
         background: linear-gradient(90deg, #f8a409, #02d8b4, #2a332a);
         background-size: 600% 600%;
         animation: gradientBG 10s ease infinite;
-    }
+    } */
 
     @keyframes gradientBG {
         0% {
