--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -8,6 +8,7 @@
         <nav aria-label="breadcrumb" class="mb-4">
             <ol class="breadcrumb bg-transparent p-0">
                 <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'store' %}">Store</a></li>
                 <li class="breadcrumb-item active" aria-current="page">{{ single_product.product_name }}</li>
             </ol>
