--- a/templates/research/projects.html
+++ b/templates/research/projects.html
@@ -189,15 +189,15 @@
   </div>
 </section>
 
-<div>
-  <nav aria-label="breadcrumb" class="mb-4">
-      <ol class="breadcrumb bg-transparent p-0">
-          <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-          <li class="breadcrumb-item"><a href="{% url 'research' %}">Research</a></li>
-          <li class="breadcrumb-item active" aria-current="page">{{ single_product.product_name }}</li>
+ <!-- Breadcrumb Navigation -->
+ <div class="container">
+  <div class="hardware-breadcrumb">
+      <ol>
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'research' %}">Research</a></li>
+          <li class="active">Project</li>
       </ol>
-  </nav>
-</div>
+  </div>
 <!-- Services Offered -->
 <section class="py-5 bg-light">
   <div class="container text-center">
