--- a/templates/software/operatingSystems.html
+++ b/templates/software/operatingSystems.html
@@ -23,7 +23,7 @@
         </header><!-- sect-heading -->
         
         <div class="row">
-            {% for product in products %}
+            {% for software in products %}
                 
                 <div class="col-md-3">
                     <div class="card card-product-grid">
