--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -14,7 +14,7 @@
 	<aside class="col-lg-6">
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title mb-4">Billing Address</h4>
+    <h4 class="card-title mb-4">Delivery Address</h4>
     <form action="{% url 'place_order' %}" method="POST">
       {% csrf_token %}
       <div class="form-row">
